--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ interface Props {
 	title: string;
 }
 
+import "@fontsource/inter";
+
 const { title } = Astro.props;
 ---
 
@@ -21,30 +23,40 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	*,
+	*::before,
+	*::after {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--white: #ffffff;
+		--accent: #d6fb41;
+		--white-text: #f0f0f0;
+		--accent-opacity: hsl(72, 72%, 56%, 28%);
+		--black-bg:#0E0E0E;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		/* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+		font-family: "Inter";
+		background: var(--black-bg);
+		font-size: 62.5%;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5 {
+		color: var(--white);
+	}
+
+	li {
+		list-style: none;
+	}
+
+	a {
+		text-decoration: none;
 	}
 </style>
