Add header component and container component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,14 +13,12 @@
     </nav>
 </header>
 <style>
-	.main-header {
-        width: 1168px;
-        margin: auto;
+    .main-header {
+        
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 7.5rem;
-
     }
 
     h1 {
@@ -34,7 +32,7 @@
 
     .links {
         display: flex;
-        gap: 4.0rem ;
+        gap: 4rem;
 
         .link {
             font-size: 1.4rem;
@@ -47,17 +45,12 @@
             display: grid;
             place-items: center;
             border-radius: 0.5rem;
-            transition: all ease .2s;
+            transition: all ease 0.2s;
 
             &:hover {
                 color: var(--accent);
                 background-color: var(--accent-opacity);
             }
-            
         }
     }
-
-
-
-	
 </style>
