--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
+import Container from '../components/Container.astro'
 ---
 
 <Layout title="Milderz - Frontend Developer">
 	<main>
-	<Header />
+	<Container backgroundColor="dark">
+		<Header />
+	</Container>
+	
+	
 		
 	</main>
 </Layout>
