--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,12 +36,14 @@ const { title } = Astro.props;
 		--white-text: #f0f0f0;
 		--accent-opacity: hsl(72, 72%, 56%, 28%);
 		--black-bg:#0E0E0E;
+		--gray-bg: #1D1D1D;
 	}
 	html {
-		/* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-		font-family: "Inter";
-		background: var(--black-bg);
+		font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		/* font-family: "Inter"; */
+		
 		font-size: 62.5%;
+		
 	}
 
 	h1,
