--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,6 @@ interface Props {
 	title: string;
 }
 
-import "@fontsource/inter";
-
 const { title } = Astro.props;
 ---
 
@@ -30,20 +28,33 @@ const { title } = Astro.props;
 		padding: 0;
 		box-sizing: border-box;
 	}
+
+	@font-face {
+		font-family: "InterBold";
+		src: url("/public/fonts/Inter_28pt-Black.ttf") format("truetype");
+		font-weight: normal;
+		font-style: normal;
+		font-display: swap;
+	}
+
+	@font-face {
+		font-family: "Inter";
+		src: url("/public/fonts/Intervariable.ttf") format("truetype");
+		font-weight: normal;
+		font-style: normal;
+		font-display: swap;
+	}
 	:root {
 		--white: #ffffff;
 		--accent: #d6fb41;
 		--white-text: #f0f0f0;
 		--accent-opacity: hsl(72, 72%, 56%, 28%);
-		--black-bg:#0E0E0E;
-		--gray-bg: #1D1D1D;
+		--black-bg: #0e0e0e;
+		--gray-bg: #1d1d1d;
 	}
 	html {
-		font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-		/* font-family: "Inter"; */
-		
+		font-family: "Inter";
 		font-size: 62.5%;
-		
 	}
 
 	h1,
