add cloudinary transformed image link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
 import Container from '../components/Container.astro'
+import Hero from '../components/Hero.astro';
 ---
 
 <Layout title="Milderz - Frontend Developer">
@@ -10,9 +11,11 @@ import Container from '../components/Container.astro'
 	<Container backgroundColor="dark">
 		<Header />
 	</Container>
+	<Container backgroundColor="dark">
+		<Hero />
+	</Container>
 	
-	
-		
+		<!-- https://res.cloudinary.com/dtu95r8h9/image/upload/e_grayscale/q_auto/milderz-avatar-nobg_p0isgp -->
 	</main>
 </Layout>
 
