--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,8 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preload" href="/public/fonts/Intervariable.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+		<link rel="preload" href="/public/fonts/Inter_28pt-Black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
