change font to google fonts

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -21,11 +21,11 @@
 
     .hero-title {
         font-size: 8.2rem;
-        /* font-weight:  600; */
+        font-weight:  900;
         color: var(--accent);
         width: 9ch;
         line-height: 90%;
-        font-family: 'InterBold';
+        
     }
 
     .hero-text {
