--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@
     h1 {
         color: var(--white);
         font-size: 2.4rem;
-
+        font-weight: 700;
         span {
             color: var(--accent);
         }
