--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,8 +13,12 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="preload" href="/public/fonts/Intervariable.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-		<link rel="preload" href="/public/fonts/Inter_28pt-Black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+			rel="stylesheet"
+		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -31,21 +35,6 @@ const { title } = Astro.props;
 		box-sizing: border-box;
 	}
 
-	@font-face {
-		font-family: "InterBold";
-		src: url("/public/fonts/Inter_28pt-Black.ttf") format("truetype");
-		font-weight: normal;
-		font-style: normal;
-		font-display: swap;
-	}
-
-	@font-face {
-		font-family: "Inter";
-		src: url("/public/fonts/Intervariable.ttf") format("truetype");
-		font-weight: normal;
-		font-style: normal;
-		font-display: swap;
-	}
 	:root {
 		--white: #ffffff;
 		--accent: #d6fb41;
@@ -55,8 +44,14 @@ const { title } = Astro.props;
 		--gray-bg: #1d1d1d;
 	}
 	html {
-		font-family: "Inter";
 		font-size: 62.5%;
+	}
+
+	body {
+		font-family: "Inter", serif;
+		font-optical-sizing: auto;
+		font-weight: 300;
+		font-style: normal;
 	}
 
 	h1,
