update container max width

--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -13,9 +13,10 @@ const backgroundColorClass = backgroundColor === 'dark' ? "background-color: #0E
 </div>
 <style>
 	.container {
-        width: 110rem;
+        /* width: 110rem; */
+        width: 90%;
         margin: auto;
-        max-width: 140rem;
+        max-width: 110rem;
         
     }
 </style>
