--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,22 +1,34 @@
 ---
+import Button from "./Button.astro";
+
 
 
 ---
 
 <div class="hero">
  <div class="hero-col1">
-    <h2 class="hero-title">Frontend Developer.</h2>
+    <h2 class="hero-title">Frontend <span>Developer.</span></h2>
     <p class="hero-text">Developing modern websites that help businesses to grow.</p>
     <div class="hero-col1-btns">
-        <button>Let's talk!</button>
-        <button>Download CV</button>
+        <Button btnText="Let's talk!"/>
+        <Button btnText="Download resume"/>
     </div>
  </div>
- <div class="hero-col2"></div>
+ <div class="hero-col2">
+    <img height="459px" class="hero-avatar" src="/milderz-avatar-nobg.png" alt="" srcset="">
+ </div>
 </div>
 <style>
 	.hero {
-        height: 57.9rem;
+        height: 45.9rem;
+        display: flex;
+        justify-content: space-between;
+    }
+    .hero-col1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 4.2rem;
     }
 
     .hero-title {
@@ -25,11 +37,25 @@
         color: var(--accent);
         width: 9ch;
         line-height: 90%;
+
+        span {
+            color: #F5FFCB;
+        }
         
     }
 
     .hero-text {
         font-size: 2rem;
         color: var(--white-text);
+        font-weight: 500;
+    }
+    .hero-col1-btns {
+        display: flex;
+        gap: 1.6rem;
+    }
+
+    .hero-avatar {
+        filter: grayscale();
+        
     }
 </style>
