update root colors

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,8 +39,10 @@ const { title } = Astro.props;
 		--white: #ffffff;
 		--accent: #d6fb41;
 		--white-text: #f0f0f0;
+		--black-text: #1d1d1d;
 		--accent-opacity: hsl(72, 72%, 56%, 28%);
-		--black-bg: #0e0e0e;
+		--accent-hover: #f5ffcb;
+		--black-bg: #161616;
 		--gray-bg: #1d1d1d;
 	}
 	html {
@@ -52,6 +54,7 @@ const { title } = Astro.props;
 		font-optical-sizing: auto;
 		font-weight: 300;
 		font-style: normal;
+		color: var(--white-text);
 	}
 
 	h1,
@@ -68,5 +71,6 @@ const { title } = Astro.props;
 
 	a {
 		text-decoration: none;
+		color: #1d1d1d;
 	}
 </style>
