add about section information

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,6 +73,11 @@ const { title } = Astro.props;
 		text-decoration: none;
 		color: #1d1d1d;
 	}
+	p {
+		font-size: 1.8rem;
+		font-weight: 400;
+		color: #C2C2C2;
+	}
 
 	/* Estilo general para el scrollbar */
 ::-webkit-scrollbar {
