--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,32 +1,62 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Header from '../components/Header.astro';
-import Container from '../components/Container.astro'
-import Hero from '../components/Hero.astro';
-import SectionHeader from '../components/SectionHeader.astro';
-import ProjectCard from '../components/ProjectCard.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import Header from "../components/Header.astro";
+import Container from "../components/Container.astro";
+import Hero from "../components/Hero.astro";
+import SectionHeader from "../components/SectionHeader.astro";
+import ProjectCard from "../components/ProjectCard.astro";
+import Button from "../components/Button.astro";
 ---
 
 <Layout title="Milderz - Frontend Developer">
 	<main>
-	<Container backgroundColor="dark">
-		<Header />
-	</Container>
-	<Container backgroundColor="dark">
-		<Hero />
-	</Container>
-	<Container>
-		<SectionHeader headerTitle="PROJECTS" headerSubtitle="Take a look at my work!"/>
-	</Container>
-	<Container>
-		<section style={{display: 'flex'}}>
+		<Container backgroundColor="dark">
+			<Header />
+		</Container>
+		<Container backgroundColor="dark">
+			<Hero />
+		</Container>
+		<Container>
+			<SectionHeader
+				headerTitle="PROJECTS"
+				headerSubtitle="Take a look at my work!"
+			/>
+		</Container>
+		<Container>
+			<section style={{ display: "flex", paddingBottom: "4rem" }}>
+				<ProjectCard />
+				<ProjectCard />
+				<ProjectCard />
+				<!-- <ProjectCard />
 			<ProjectCard />
-			<ProjectCard />
-			<ProjectCard />
-		</section>
-	</Container>
-	
+			<ProjectCard /> -->
+			</section>
+		</Container>
+		<Container backgroundColor="dark">
+			<SectionHeader
+				headerTitle="ABOUT ME"
+				headerSubtitle="Get to know more about me"
+			/>
+			<article class="about-text">
+				<p>
+					As a frontend developer, I specialize in creating modern
+					websites and apps that assist businesses in gaining an advantage
+					over their competitors by creating fast and reliable websites.
+				</p>
+				<p>
+					My expertise includes working with technologies such as <span>HTML,
+						CSS, Javascript, Astro, Styled Components,</span> and <span>React JS</span>.
+				</p>
+				<p>
+					Additionally, I am currently in the process of learning the
+					basics of UX/UI design to ckmplement my coding abilities.
+				</p>
+			</article>
+			
+			<Button btnText="Download resume" />
+		</Container>
+
 		<!-- https://res.cloudinary.com/dtu95r8h9/image/upload/e_grayscale/q_auto/milderz-avatar-nobg_p0isgp -->
 	</main>
 </Layout>
@@ -34,6 +64,20 @@ import ProjectCard from '../components/ProjectCard.astro';
 <style>
 	main {
 		margin: auto;
-		
+	}
+	.about-text {
+		display: flex;
+		flex-direction: column; 
+		gap: 2rem;
+		margin-bottom: 4rem;
+
+
+		span {
+			color: var(--accent);
+			font-weight: 700;
+		}
+		p {
+			max-width: 60ch;
+		}
 	}
 </style>
