--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@
             <li class="link">PROJECTS</li>
             <li class="link">ABOUT</li>
             <li class="link">CONTACT</li>
+            <li class="link">BLOG</li>
         </ul>
     </nav>
 </header>
@@ -22,15 +23,18 @@
     }
 
     h1 {
+        flex: 2;
         color: var(--white);
         font-size: 2.4rem;
         font-weight: 700;
         span {
             color: var(--accent);
         }
+       
     }
 
     .links {
+        flex: 1;
         display: flex;
         gap: 4rem;
 
