add contact section and footer

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import Button from "./Button.astro";
     <h2 class="hero-title">Frontend <span>Developer.</span></h2>
     <p class="hero-text">Developing modern websites that help businesses to grow 🚀</p>
     <div class="hero-col1-btns">
-        <Button btnText="Let's talk!"/>
+        <Button btnText="Lets talk!"/>
         <Button btnText="Download resume"/>
     </div>
  </div>
