--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,6 +55,7 @@ const { title } = Astro.props;
 		font-weight: 300;
 		font-style: normal;
 		color: var(--white-text);
+		background-color: #0E0E0E;
 	}
 
 	h1,
