--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,6 +24,23 @@ import Button from "./Button.astro";
         height: 45.9rem;
         display: flex;
         justify-content: space-between;
+        /* position: relative; */
+
+        
+    }
+
+    .hero::after {
+        content: '';
+        background-image: url('/public/Grid\ layers\ -\ v3.png');
+        width: 100%;
+        height: 53.4rem;
+        
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        z-index: 1;
+        mask-image: radial-gradient(circle, black 40%, transparent 100%);
+  -webkit-mask-image: radial-gradient(circle, black 40%, transparent 100%);
     }
     .hero-col1 {
         display: flex;
@@ -58,6 +75,8 @@ import Button from "./Button.astro";
 
     .hero-avatar {
         filter: grayscale();
+        position: relative;
+        z-index: 2;
         
     }
 
