--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -89,7 +89,7 @@ const { title } = Astro.props;
 /* Color y estilo del track (fondo del scrollbar) */
 ::-webkit-scrollbar-track {
   background: var(--black-bg); /* Color del fondo */
-  border-radius: 10px; /* Opcional: bordes redondeados */
+  border-radius: 10px; /* Opcional: bordes  */
 }
 
 /* Color y estilo del thumb (la parte deslizante del scrollbar) */
