--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,6 +20,8 @@
         justify-content: space-between;
         align-items: center;
         height: 7.5rem;
+        z-index: 2;
+        position: relative;
     }
 
     h1 {
