--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,62 +1,90 @@
 ---
-
+import Menu from "../../public/menu-alt-02-svgrepo-com.svg";
 ---
 
 <header class="main-header">
-    <h1>milderz<span>.</span></h1>
-    <nav>
-        <ul class="links">
-            <li class="link">PROJECTS</li>
-            <li class="link">ABOUT</li>
-            <li class="link">CONTACT</li>
-            <li class="link">BLOG</li>
-        </ul>
-    </nav>
+  <h1>milderz<span>.</span></h1>
+  <nav>
+    <ul class="links">
+      <li class="link">PROJECTS</li>
+      <li class="link">ABOUT</li>
+      <li class="link">CONTACT</li>
+      <li class="link">BLOG</li>
+    </ul>
+  </nav>
+  <Menu class="menu-icon" height={60} width={60} />
 </header>
 <style>
-    .main-header {
-        
-        display: flex;
-        justify-content: space-between;
+  .main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 7.5rem;
+    z-index: 2;
+    position: relative;
+  }
+
+  h1 {
+    flex: 2;
+    color: var(--white);
+    font-size: 2.4rem;
+    font-weight: 700;
+    span {
+      color: var(--accent);
+    }
+  }
+
+  .links {
+    flex: 1;
+    display: flex;
+    gap: 4rem;
+
+    .link {
+      font-size: 1.4rem;
+      color: var(--white-text);
+      font-weight: 700;
+      cursor: pointer;
+      background-color: transparent;
+      width: 9.9rem;
+      height: 3.4rem;
+      display: grid;
+      place-items: center;
+      border-radius: 0.5rem;
+      transition: all ease 0.2s;
+
+      &:hover {
+        color: var(--accent);
+        background-color: var(--accent-opacity);
+      }
+     
+    }
+
+    @media screen and (max-width: 800px) {
+        flex-direction: column ;
         align-items: center;
-        height: 7.5rem;
-        z-index: 2;
         position: relative;
+        z-index: 3 !important;
     }
+  }
 
-    h1 {
-        flex: 2;
-        color: var(--white);
-        font-size: 2.4rem;
-        font-weight: 700;
-        span {
-            color: var(--accent);
-        }
-       
+  nav {
+    @media screen and (max-width: 800px) {
+      /* display: none; */
+      position: absolute;
+      top: 7.5rem;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      border: 1px solid red;
     }
+  }
 
-    .links {
-        flex: 1;
-        display: flex;
-        gap: 4rem;
-
-        .link {
-            font-size: 1.4rem;
-            color: var(--white-text);
-            font-weight: 700;
-            cursor: pointer;
-            background-color: transparent;
-            width: 9.9rem;
-            height: 3.4rem;
-            display: grid;
-            place-items: center;
-            border-radius: 0.5rem;
-            transition: all ease 0.2s;
-
-            &:hover {
-                color: var(--accent);
-                background-color: var(--accent-opacity);
-            }
-        }
+  .menu-icon {
+    display: none;
+    @media screen and (max-width: 800px) {
+      display: block;
+      cursor: pointer;
+      z-index: 3;
     }
+  }
 </style>
