--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -39,7 +39,7 @@ import Button from "./Button.astro";
 
     .hero::after {
         content: '';
-        background-image: url('/public/Grid\ layers\ -\ v3.png');
+        background-image: url('/Grid\ layers\ -\ v3.png');
         width: 100%;
         height: 53.4rem;
         
