--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -26,6 +26,12 @@ import Button from "./Button.astro";
     }
     .contact-subtitle {
         font-size: 3.6rem;
+        @media screen and (max-width: 800px) {
+            font-size: 2.4rem;
+        }
+        @media screen and (max-width: 460px) {
+            width: 14ch;
+            text-align: center;
     }
     
 </style>
