--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,10 +6,10 @@ import Menu from "../../public/menu-alt-02-svgrepo-com.svg";
   <h1>milderz<span>.</span></h1>
   <nav>
     <ul class="links">
-      <li class="link">PROJECTS</li>
-      <li class="link">ABOUT</li>
-      <li class="link">CONTACT</li>
-      <li class="link">BLOG</li>
+      <li class="link">Projects</li>
+      <li class="link">About</li>
+      <li class="link">Contact</li>
+      <li class="link">Blog</li>
     </ul>
   </nav>
   <Menu class="menu-icon" height={60} width={60} />
@@ -22,6 +22,11 @@ import Menu from "../../public/menu-alt-02-svgrepo-com.svg";
     height: 7.5rem;
     z-index: 2;
     position: relative;
+
+    @media screen and (max-width: 800px) {
+        position: static
+        
+    }
   }
 
   h1 {
@@ -56,14 +61,27 @@ import Menu from "../../public/menu-alt-02-svgrepo-com.svg";
         color: var(--accent);
         background-color: var(--accent-opacity);
       }
+
+      @media screen and (max-width: 800px) {
+       border-bottom: 1px solid #585858;
+       width: 28.8rem; 
+       padding: 2.8rem 0;
+       display: flex;
+       justify-content: start;
+       align-items: center;
+       border-radius: 0;
+       transition: none;
+       font-weight: 700;
+       font-size: 1.4rem; 
+    }
      
     }
 
     @media screen and (max-width: 800px) {
         flex-direction: column ;
         align-items: center;
-        position: relative;
-        z-index: 3 !important;
+        gap: 0;
+        
     }
   }
 
@@ -75,7 +93,8 @@ import Menu from "../../public/menu-alt-02-svgrepo-com.svg";
       left: 0;
       width: 100%;
       height: 100vh;
-      border: 1px solid red;
+      background-color: var(--black-bg);
+      z-index: 4;
     }
   }
 
