--- a/src/components/SectionHeader.astro
+++ b/src/components/SectionHeader.astro
@@ -13,6 +13,11 @@ const { headerTitle, headerSubtitle } = Astro.props;
         flex-direction: column;
         gap: 2rem;
         padding: 7.2rem 0;
+        @media screen and (max-width: 484px) {
+          padding: 4.6rem 0;
+          
+        
+    }
     }
 
 .sectionHeaderTitle {
