--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,13 +6,19 @@
 
 <footer class="footer">
     <div class="footer-content">
-        <p>© 2021, Built with Astro</p>
-        <p>Designed by <a href="https://twitter.com/ajcwebdev" target="_blank" rel="noopener">AJC Web Development</a></p>
+        <ul>
+            <li>LinkedIn</li>
+            <li>GitHub</li>
+        
+        </ul>
+         
+        
     </div>
 </footer>
 <style>
 .footer {
-    border-top: solid 1px #C2C2C2;
+    color: #fff;
+    border-top: solid 1px #585858;
 }
     
     
