--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,7 +5,7 @@ import Button from "./Button.astro";
 ---
 
 <section class="contact">
-    <h3 class="contact-title">CONTACT ME</h3>
+    <h3 id="contact" class="contact-title">CONTACT ME</h3>
     <h4 class="contact-subtitle">Got a project? Send me a message!</h4>
     <Button btnText="Lets talk!"/>
 </section>
