--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,10 @@ import CloseIcon from "../../public/close-bold.svg";
   <h1>milderz<span>.</span></h1>
   <nav>
     <ul class="links">
-      <li class="link">Projects</li>
-      <li class="link">About</li>
-      <li class="link">Contact</li>
-      <li class="link">Blog</li>
+      <li class="link"><a href="#projects">Projects</a></li>
+      <li class="link"><a href="#about">About</a></li>
+      <li class="link"><a href="#contact">Contact</a></li>
+      <!-- <li class="link"><a href="#blog">Blog</a></li> -->
     </ul>
   </nav>
   <Menu class="menu-icon" height={60} width={60} />
@@ -81,6 +81,15 @@ import CloseIcon from "../../public/close-bold.svg";
       &:hover {
         color: var(--accent);
         background-color: var(--accent-opacity);
+
+       
+      }
+
+      &:hover a {
+        color: var(--accent);
+        
+
+       
       }
 
       @media screen and (max-width: 800px) {
@@ -94,6 +103,11 @@ import CloseIcon from "../../public/close-bold.svg";
         transition: none;
         font-weight: 700;
         font-size: 1.4rem;
+      }
+
+      a {
+        color: var(--white-text);
+       
       }
     }
 
