--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,7 @@ import { projectsItems } from "../projectsData";
 			<SectionHeader
 				headerTitle="PROJECTS"
 				headerSubtitle="Take a look at my work!"
+				titleId="projects"
 			/>
 		</Container>
 		<Container>
@@ -39,6 +40,7 @@ import { projectsItems } from "../projectsData";
 			<SectionHeader
 				headerTitle="ABOUT ME"
 				headerSubtitle="Get to know more about me"
+				titleId="about"
 			/>
 			<article class="about-text">
 				<p>
