--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,9 @@
 ---
 import Menu from "../../public/menu-alt-02-svgrepo-com.svg";
 import CloseIcon from "../../public/close-bold.svg";
+import LinkedIn from "../../public/linkedin-round.svg";
+import Github from "../../public/github.svg";
+import Gmail from "../../public/gmail.svg";
 ---
 
 <header class="main-header">
@@ -12,6 +15,11 @@ import CloseIcon from "../../public/close-bold.svg";
       <li class="link"><a href="#contact">Contact</a></li>
       <!-- <li class="link"><a href="#blog">Blog</a></li> -->
     </ul>
+    <ul class="socials">
+      <li class="social-link"><LinkedIn height={30} width={30}></li>
+      <li class="social-link"><Github height={30} width={30}></li>
+      <li class="social-link"><Gmail height={30} width={30}></li>
+    </ul>
   </nav>
   <Menu class="menu-icon" height={60} width={60} />
   <CloseIcon class="close-bold" height={40} width={40} />
@@ -22,6 +30,7 @@ import CloseIcon from "../../public/close-bold.svg";
   const closeIcon = document.querySelector(".close-bold");
   const nav = document.querySelector("nav");
   const body = document.querySelector("body");
+  const links = document.querySelectorAll(".link");
 
   menuIcon.addEventListener("click", () => {
     nav.classList.add("nav-active");
@@ -34,6 +43,15 @@ import CloseIcon from "../../public/close-bold.svg";
     closeIcon.classList.remove("close-bold-active");
     menuIcon.classList.remove("menu-icon-inactive");
     body.style.overflow = "auto";
+  });
+
+  links.forEach((link) => {
+    link.addEventListener("click", () => {
+      nav.classList.remove("nav-active");
+      closeIcon.classList.remove("close-bold-active");
+      menuIcon.classList.remove("menu-icon-inactive");
+      body.style.overflow = "auto";
+    });
   });
 </script>
 <style>
@@ -120,10 +138,10 @@ import CloseIcon from "../../public/close-bold.svg";
 
   nav {
     @media screen and (max-width: 800px) {
-      /* display: none; */
+      
       visibility: hidden;
       opacity: 0;
-      transition: all ease 0.3s;
+      transition: opacity ease 0.3s;
       position: absolute;
       top: 7.5rem;
       left: 0;
@@ -132,6 +150,35 @@ import CloseIcon from "../../public/close-bold.svg";
       background-color: #0e0e0e;
       z-index: 4;
       padding: 2.4rem 0;
+    }
+  }
+
+  .socials {
+    display: none;
+    justify-content: center;
+    padding: 2.4rem;
+    @media screen and (max-width: 800px) {
+      display: flex;
+      
+    }
+
+    .social-link {
+      display: grid;
+      place-items: center;
+      font-size: 1.4rem;
+      color: var(--white-text);
+      font-weight: 700;
+      cursor: pointer;
+      background-color: transparent;
+      width: 9.9rem;
+      height: 3.4rem;
+      
+
+      &:hover {
+        color: var(--accent);
+        background-color: var(--accent-opacity);
+        
+      }
     }
   }
 
@@ -157,6 +204,7 @@ import CloseIcon from "../../public/close-bold.svg";
   .nav-active {
     visibility: visible;
     opacity: 1;
+    
     
   }
 </style>
