add a tags on each li on  the socials list

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,9 +16,21 @@ import Gmail from "../../public/gmail.svg";
       <!-- <li class="link"><a href="#blog">Blog</a></li> -->
     </ul>
     <ul class="socials">
-      <li class="social-link"><LinkedIn height={30} width={30}></li>
-      <li class="social-link"><Github height={30} width={30}></li>
-      <li class="social-link"><Gmail height={30} width={30}></li>
+      <li class="social-link">
+      <a href="https://www.linkedin.com/in/milder-navarro-068267216/" target="_blank" rel="noopener noreferrer">
+        <LinkedIn height={30} width={30} />
+      </a>
+      </li>
+      <li class="social-link">
+      <a href="https://github.com/milderz" target="_blank" rel="noopener noreferrer">
+        <Github height={30} width={30} />
+      </a>
+      </li>
+      <li class="social-link">
+      <a href="mailto:mzunax@gmail.com">
+        <Gmail height={30} width={30} />
+      </a>
+      </li>
     </ul>
   </nav>
   <Menu class="menu-icon" height={60} width={60} />
