--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,8 +19,27 @@ const { title } = Astro.props;
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 			rel="stylesheet"
 		/>
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<!-- HTML Meta Tags -->
+<title>Milderz - Frontend Developer</title>
+<meta name="description" content="Astro description">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://milderz.com/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Milderz - Frontend Developer">
+<meta property="og:description" content="Astro description">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/850dfb2f-b322-4812-9c2e-19198c9a908f.png?token=vVlpgsepB9vwekdpnJ2fVWEzlloWYtXyCILCcW3Rslw&height=729&width=1200&expires=33282557955">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="milderz.com">
+<meta property="twitter:url" content="https://milderz.com/">
+<meta name="twitter:title" content="Milderz - Frontend Developer">
+<meta name="twitter:description" content="Astro description">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/850dfb2f-b322-4812-9c2e-19198c9a908f.png?token=vVlpgsepB9vwekdpnJ2fVWEzlloWYtXyCILCcW3Rslw&height=729&width=1200&expires=33282557955">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+		
 	</head>
 	<body>
 		<slot />
